- Added functionality to configure NCommon using Configure class. - Added configuration for NCommon.NHibernate - Added configuration for NCommon.Db4o - Added initial implementation of multi-database support for NCommon.NHibernate.
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.Db4o/src/NCommon.Db4o.csproj
+++ b/NCommon.Db4o/src/NCommon.Db4o.csproj
@@ -74,6 +74,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Db4oConfiguration.cs" />
     <Compile Include="Db4oRepository.cs" />
     <Compile Include="Db4oTransaction.cs" />
     <Compile Include="Db4oUnitOfWork.cs" />
