- Moved test domain for NCommon.NHibernate to separate project(s) - Added support for multi database to NCommon.NHiberate. - Added initial tests for multi database support. - All NCommon.NHibernate tests are passing. - Unloaded NCommon.LinqToSql, NCommon.EntityFramework, NCommon.Db4o test projects, required refactoring and restructuring for multi database support. - Added projects (empty) for container adapter implementations for: Autofac, Castle Windsor, StructureMap, Spring and Unity.

--- a/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
+++ b/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{98FB0800-6605-4FD9-9948-36D11C744881}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NCommon.EntityFramework</RootNamespace>
+    <RootNamespace>NCommon.Data.EntityFramework</RootNamespace>
     <AssemblyName>NCommon.EntityFramework</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
