--- a/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/NCommon.NHibernate.Tests.csproj
+++ b/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/NCommon.NHibernate.Tests.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{96B9D9DE-3389-4FBF-A552-C09434E27329}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NCommon.NHibernate.Tests</RootNamespace>
+    <RootNamespace>NCommon.Data.NHibernate.Tests</RootNamespace>
     <AssemblyName>NCommon.NHibernate.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -112,23 +112,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\Address.cs" />
-    <Compile Include="Domain\Money.cs" />
-    <Compile Include="Domain\MoneyUserType.cs" />
-    <Compile Include="Domain\MonthlySalesSummary.cs" />
-    <Compile Include="Domain\Order.cs" />
-    <Compile Include="Domain\Customer.cs" />
-    <Compile Include="Domain\OrderItem.cs" />
-    <Compile Include="Domain\Product.cs" />
+    <Compile Include="CompositeUserTypeBaseTests.cs" />
     <Compile Include="FakeState.cs" />
-    <Compile Include="Mappings\CustomerMap.cs" />
-    <Compile Include="Mappings\MonthlySalesSummaryMap.cs" />
-    <Compile Include="Mappings\OrderItemMap.cs" />
-    <Compile Include="Mappings\OrderMap.cs" />
-    <Compile Include="Mappings\ProductMap.cs" />
+    <Compile Include="NHRepositoryTests.cs" />
     <Compile Include="NHSessionResolverTests.cs" />
-    <Compile Include="NHTestDataActions.cs" />
-    <Compile Include="NHTestDataGenerator.cs" />
+    <Compile Include="NHTestBase.cs" />
+    <Compile Include="NHTestDataActions.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="NHTestDataGenerator.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="NHTransactionTests.cs" />
+    <Compile Include="NHUnitOfWorkFactoryTests.cs" />
+    <Compile Include="NHUnitOfWorkTests.cs" />
+    <Compile Include="NHUnitOfWorkTransactionTests.cs" />
+    <Compile Include="OrderItemsProductStrategy.cs" />
+    <Compile Include="OrderOrderItemsStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -159,6 +159,14 @@
     <ProjectReference Include="..\..\src\NCommon.NHibernate.csproj">
       <Project>{01A6D2F9-C34E-4D87-BE7A-4F36A78BED66}</Project>
       <Name>NCommon.NHibernate %28src\NCommon.NHibernate%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NCommon.NHibernate.Tests.HRDomain\NCommon.NHibernate.Tests.HRDomain.csproj">
+      <Project>{0CB980C0-269C-4A52-9E15-1226B343AD5E}</Project>
+      <Name>NCommon.NHibernate.Tests.HRDomain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NCommon.NHibernate.Tests.OrdersDomain\NCommon.NHibernate.Tests.OrdersDomain.csproj">
+      <Project>{6FE3005E-FFA1-4DE7-BC47-995D53CFB9CB}</Project>
+      <Name>NCommon.NHibernate.Tests.OrdersDomain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
