- Simplified configuration classes - Added container implementations of Castle, StructureMap, NInject and Unity - Removed container implementations of Autofac and Spring. [Support may be added later]

--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.StructureMap/NCommon.ContainerAdapter.StructureMap.csproj
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.StructureMap/NCommon.ContainerAdapter.StructureMap.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="StructureMap">
+      <HintPath>..\..\Libs\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StructureMapContainerAdapter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\NCommon\src\NCommon.csproj">
+      <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
+      <Name>NCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
