--- a/NCommon/src/NCommon.csproj
+++ b/NCommon/src/NCommon.csproj
@@ -80,7 +80,7 @@
   <ItemGroup>
     <Compile Include="Configuration\IContainerAdapter.cs" />
     <Compile Include="Configuration\IDataConfiguration.cs" />
-    <Compile Include="Configuration\Impl\StateConfiguration.cs" />
+    <Compile Include="Configuration\DefaultStateConfiguration.cs" />
     <Compile Include="Configuration\INCommonConfig.cs" />
     <Compile Include="Configuration\IStateConfiguration.cs" />
     <Compile Include="Configure.cs" />
@@ -103,7 +103,7 @@
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\SpecificationExtensions.cs" />
     <Compile Include="Guard.cs" />
-    <Compile Include="Configuration\Impl\NCommonConfig.cs" />
+    <Compile Include="Configuration\NCommonConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\IRepository.cs" />
     <Compile Include="Data\RepositoryBase.cs" />
