- Added multi database functionality for Linq2Sql and EntityFramework.
- Refactored NCommon.NHibernate.

--- a/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
+++ b/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
@@ -74,10 +74,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EFConfiguration.cs" />
     <Compile Include="EFRepository.cs" />
+    <Compile Include="EFSessionResolver.cs" />
     <Compile Include="EFTransaction.cs" />
     <Compile Include="EFUnitOfWork.cs" />
     <Compile Include="EFUnitOfWorkFactory.cs" />
+    <Compile Include="EFUnitOfWorkSettings.cs" />
+    <Compile Include="IEFSessionResolver.cs" />
     <Compile Include="IEFSession.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
