- Added tests for container adapters. - Removed overloaded constructor that takes ISession parameter in NHRepository. Default constructor will use ServiceLocator to resolve manually. - Removed overloaded constructor that takes ISession parameter in EFRepository. Default constructor will use ServiceLocator to resolve manually. - Removed overloaded constructor that takes ISession parameter in LinqToSqlRepository. Default constructor will use ServiceLocator to resolve manually. - Added psake build script [incomplete]
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.NHibernate/src/NCommon.NHibernate.csproj
+++ b/NCommon.NHibernate/src/NCommon.NHibernate.csproj
@@ -54,6 +54,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="NHibernate, Version=2.1.0.1003, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libs\NHibernate.dll</HintPath>
