- Restructuring NCommon unit of work configuration. - Added DefaultUnitOfWorkConfiguration class to configure default unit of work settings.
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests/App.Config
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests/App.Config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="HREntities" connectionString="metadata=res://*/HRData.csdl|res://*/HRData.ssdl|res://*/HRData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(local);Initial Catalog=DevelopmentDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
-    <add name="OrderEntities" connectionString="metadata=res://*/OrdersData.csdl|res://*/OrdersData.ssdl|res://*/OrdersData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(local);Initial Catalog=DevelopmentDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="HREntities" connectionString="metadata=res://*/HRData.csdl|res://*/HRData.ssdl|res://*/HRData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(local)\SQLExpress;Initial Catalog=DevelopmentDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="OrderEntities" connectionString="metadata=res://*/OrdersData.csdl|res://*/OrdersData.ssdl|res://*/OrdersData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(local)\SQLExpress;Initial Catalog=DevelopmentDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
