--- a/NCommon/src/NCommon.csproj
+++ b/NCommon/src/NCommon.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Configuration\DefaultUnitOfWorkConfiguration.cs" />
     <Compile Include="Data\ITransactionManager.cs" />
     <Compile Include="Data\IUnitOfWorkScope.cs" />
+    <Compile Include="Data\Language\EagerFetchingPath.cs" />
     <Compile Include="Data\Language\IEagerFetchingPath.cs" />
     <Compile Include="Data\Language\RepositoryEagerFetchingStrategy.cs" />
     <Compile Include="Data\UnitOfWorkManager.cs" />
