- Updated solution and project files to net 4.0 - Added support for Autofac container - Added support for EF 4.0 [NOTE: Build script is currently broken. Need to fix build to allow both 3.5 and 4.0 builds]
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/Libs/NUnit/nunit-console.exe.config
+++ b/Libs/NUnit/nunit-console.exe.config
@@ -8,9 +8,14 @@
 	  </switches>
 	</system.diagnostics>
 
+  <startup>
+    <requiredRuntime version="4.0.30319"/>
+  </startup>
+
   <runtime>
     <!-- We need this so test exceptions don't crash NUnit -->
     <legacyUnhandledExceptionPolicy enabled="1" />
+    <loadFromRemoteSources enabled="true"/>
 
     <!-- Look for addins in the addins directory for now -->
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
