--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.CastleWindsor/NCommon.ContainerAdapter.CastleWindsor.csproj
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.CastleWindsor/NCommon.ContainerAdapter.CastleWindsor.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NCommon.ContainerAdapter.CastleWindsor</RootNamespace>
     <AssemblyName>NCommon.ContainerAdapter.CastleWindsor</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion Condition="$(TargetFrameworkVersion)==''">v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
