--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapters.Tests/NCommon.ContainerAdapters.Tests.csproj
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapters.Tests/NCommon.ContainerAdapters.Tests.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NCommon.ContainerAdapters.Tests</RootNamespace>
     <AssemblyName>NCommon.ContainerAdapters.Tests</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion Condition="$(TargetFrameworkVersion)==''">v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac">
+      <HintPath>..\..\Libs\Autofac\Net4.0\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.Core, Version=1.1.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libs\Castle\Castle.Core.dll</HintPath>
@@ -95,6 +99,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Autofac\when_configuring_custom_state.cs" />
+    <Compile Include="Autofac\when_configuring_data_using_EFConfiguration.cs" />
+    <Compile Include="Autofac\when_configuring_data_using_LinqToSqlConfiguration.cs" />
+    <Compile Include="Autofac\when_configuring_data_using_NHConfiguration.cs" />
+    <Compile Include="Autofac\when_configuring_default_state.cs" />
     <Compile Include="CastleWindsor\when_configuring_custom_state.cs" />
     <Compile Include="CastleWindsor\when_configuring_data_using_EFConfiguration.cs" />
     <Compile Include="CastleWindsor\when_configuring_data_using_LinqToSqlConfiguration.cs" />
@@ -151,6 +160,10 @@
     <ProjectReference Include="..\NCommon.ContainerAdapter.Unity\NCommon.ContainerAdapter.Unity.csproj">
       <Project>{758EB68B-FE27-4AC8-8098-D4293F1CE4F9}</Project>
       <Name>NCommon.ContainerAdapter.Unity</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NCommon.ContainerAdapters.Autofac\NCommon.ContainerAdapters.Autofac.csproj">
+      <Project>{CB2938EE-A72C-49EA-9DFB-C648CC9C600E}</Project>
+      <Name>NCommon.ContainerAdapters.Autofac</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
