--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests.HRDomain/App.Config
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests.HRDomain/App.Config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="HREntities" connectionString="metadata=res://*/HRData.csdl|res://*/HRData.ssdl|res://*/HRData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(local);Initial Catalog=DevelopmentDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="HREntities" connectionString="metadata=res://*/HRData.csdl|res://*/HRData.ssdl|res://*/HRData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=(local);Initial Catalog=DevelopmentDB;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
