--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests.OrdersDomain/NCommon.EntityFramework.Tests.OrdersDomain.csproj
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests.OrdersDomain/NCommon.EntityFramework.Tests.OrdersDomain.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NCommon.Data.EntityFramework.Tests.OrdersDomain</RootNamespace>
     <AssemblyName>NCommon.EntityFramework.Tests.OrdersDomain</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion Condition="$(TargetFrameworkVersion)==''">v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
