--- a/NCommon.LinqToSql/src/NCommon.LinqToSql.csproj
+++ b/NCommon.LinqToSql/src/NCommon.LinqToSql.csproj
@@ -8,9 +8,9 @@
     <ProjectGuid>{2781A661-3EA8-4917-B043-F3193FB0F7C8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NCommon.LinqToSql</RootNamespace>
+    <RootNamespace>NCommon.Data.LinqToSql</RootNamespace>
     <AssemblyName>NCommon.LinqToSql</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion Condition="$(TargetFrameworkVersion)==''">v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>ncommon.snk</AssemblyOriginatorKeyFile>
@@ -33,6 +33,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
