--- a/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests.HRDomain/app.config
+++ b/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests.HRDomain/app.config
@@ -1,10 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="NCommon.LinqToSql.Tests.HRDomain.Properties.Settings.DevelopmentDBConnectionString"
-            connectionString="Data Source=(local);Initial Catalog=DevelopmentDB;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="NCommon.LinqToSql.Tests.HRDomain.Properties.Settings.DevelopmentDBConnectionString" connectionString="Data Source=(local);Initial Catalog=DevelopmentDB;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
