--- a/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/App.config
+++ b/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/App.config
@@ -1,6 +1,6 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
 	<connectionStrings>
 		<add name="testdb" connectionString="Data Source=(local);Initial Catalog=DevelopmentDB;Trusted_Connection=true"/>
 	</connectionStrings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
