- Added NCommon.Testing project to easily configure NCommon for unit tests. - Moved FakeState into NCommon.Testing
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/NCommon.NHibernate.Tests.csproj
+++ b/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/NCommon.NHibernate.Tests.csproj
@@ -117,9 +117,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\..\NCommon\tests\FakeState.cs">
-      <Link>FakeState.cs</Link>
-    </Compile>
     <Compile Include="NHRepositoryQueryTests.cs" />
     <Compile Include="NHRepositoryTestBase.cs" />
     <Compile Include="NHRepositoryTransactionTests.cs" />
@@ -155,6 +152,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\NCommon.Testing\NCommon.Testing.csproj">
+      <Project>{AC96FD87-C53C-4833-8DD8-4774E36F0E4A}</Project>
+      <Name>NCommon.Testing</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\NCommon\src\NCommon.csproj">
       <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
       <Name>NCommon</Name>
