--- a/NCommon.Db4o/tests/NCommon.Db4o.Tests.csproj
+++ b/NCommon.Db4o/tests/NCommon.Db4o.Tests.csproj
@@ -88,9 +88,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\NCommon\tests\FakeState.cs">
-      <Link>FakeState.cs</Link>
-    </Compile>
     <Compile Include="Db4oRepositoryTests.cs" />
     <Compile Include="Db4oTestDataActions.cs" />
     <Compile Include="Db4oTestDataGenerator.cs" />
@@ -121,6 +118,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\NCommon.Testing\NCommon.Testing.csproj">
+      <Project>{AC96FD87-C53C-4833-8DD8-4774E36F0E4A}</Project>
+      <Name>NCommon.Testing</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\NCommon\src\NCommon.csproj">
       <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
       <Name>NCommon</Name>
