--- a/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
+++ b/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NCommon.Data.EntityFramework</RootNamespace>
     <AssemblyName>NCommon.EntityFramework</AssemblyName>
-    <TargetFrameworkVersion Condition="$(TargetFrameworkVersion)==''">v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>ncommon.snk</AssemblyOriginatorKeyFile>
@@ -40,11 +40,13 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;NETv40</DefineConstants>
+    <DefineConstants Condition="'$(TargetFrameworkVersion)' == 'v4.0'">TRACE;DEBUG;NETv40</DefineConstants>
+    <DefineConstants Condition="'$(TargetFrameworkVersion)' == ''">TRACE;DEBUG;</DefineConstants>
+    <DefineConstants Condition="'$(TargetFrameworkVersion)' == '3.5'">TRACE;DEBUG;</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;net40</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
