--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests/NCommon.EntityFramework.Tests.csproj
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests/NCommon.EntityFramework.Tests.csproj
@@ -94,7 +94,6 @@
     <Compile Include="EFRepositoryTestBase.cs" />
     <Compile Include="EFUnitOfWorkFactoryTests.cs" />
     <Compile Include="EFUnitOfWorkTests.cs" />
-    <Compile Include="FakeState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -118,6 +117,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\NCommon.Testing\NCommon.Testing.csproj">
+      <Project>{AC96FD87-C53C-4833-8DD8-4774E36F0E4A}</Project>
+      <Name>NCommon.Testing</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\NCommon\src\NCommon.csproj">
       <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
       <Name>NCommon</Name>
