--- a/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests/NCommon.LinqToSql.Tests.csproj
+++ b/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests/NCommon.LinqToSql.Tests.csproj
@@ -84,7 +84,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FakeState.cs" />
     <Compile Include="LinqToSqlRepositoryQueryTests.cs" />
     <Compile Include="LinqToSqlRepositoryTransactionTests.cs" />
     <Compile Include="LinqToSqlResolverTests.cs" />
@@ -132,6 +131,10 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\NCommon.Testing\NCommon.Testing.csproj">
+      <Project>{AC96FD87-C53C-4833-8DD8-4774E36F0E4A}</Project>
+      <Name>NCommon.Testing</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\NCommon\src\NCommon.csproj">
       <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
       <Name>NCommon</Name>
