- Fixed bug in HttpSessionState that would allow sharing of state between different HTTP sessions is HttpSessionState.cs is registered as a singleton. - Updated Rhino.Mocks library to 3.6 - Added new configuration option WithDistinctRoot in NHConfiguration to allow using DistinctRootEntityTransformer with NH queries. - Added tests for NHRepository<>.WithDistinctRoot implementation. - Modified state and session implementations to allow storing/retrieving state data without any keys. - Made protected methods in EntityValidatorBase.cs virtual to allow sub classes to override default implementation. - Made protected methods in BusinessRulesEvaluatorBase.cs virtual to allow sub classes to override default implementation.
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.Db4o/tests/NCommon.Db4o.Tests.csproj
+++ b/NCommon.Db4o/tests/NCommon.Db4o.Tests.csproj
@@ -53,11 +53,17 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Db4objects.Db4o, Version=7.4.121.14026, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
+    <Reference Include="Cecil.FlowAnalysis">
+      <HintPath>..\..\Libs\Db4o\Cecil.FlowAnalysis.dll</HintPath>
+    </Reference>
+    <Reference Include="Db4objects.Db4o, Version=7.12.132.14217, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libs\Db4o\Db4objects.Db4o.dll</HintPath>
     </Reference>
-    <Reference Include="Db4objects.Db4o.Linq, Version=7.4.121.14026, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
+    <Reference Include="Db4objects.Db4o.CS">
+      <HintPath>..\..\Libs\Db4o\Db4objects.Db4o.CS.dll</HintPath>
+    </Reference>
+    <Reference Include="Db4objects.Db4o.Linq, Version=7.12.132.14217, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Libs\Db4o\Db4objects.Db4o.Linq.dll</HintPath>
     </Reference>
