- Added TransactionMode enum for accepting the transaction mode a UnitOfWorkScope should be created in. - Added ability for a UnitOfWorkScope to run under a Supress transaction scope. - Exposed the IUnitOfWork a scope uses via property CurrentUnitOfWork in UnitOfWorkScope - Exposed the IUnitOfWork used by a repository via property CurrentUnitOfWork. - Added tests for UnitOfWorkScope to ensure proper disposal/cleanup of transactions. - Fixed dual commit issue with UnitOfWorkScope when AutoCommit setting is enabled.
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/App.config
+++ b/NCommon.NHibernate/tests/NCommon.NHibernate.Tests/App.config
@@ -3,4 +3,6 @@
 	<connectionStrings>
 		<add name="testdb" connectionString="Data Source=(local);Initial Catalog=Sandbox;Integrated Security=true"/>
 	</connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup>
+  <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+</configuration>
