- Initial implementation of POCO and Code-Only support.
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
+++ b/NCommon.EntityFramework/src/NCommon.EntityFramework.csproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <Compile Include="EFConfiguration.cs" />
     <Compile Include="EFRepository.cs" />
+    <Compile Include="EFSession.cs" />
     <Compile Include="EFSessionResolver.cs" />
     <Compile Include="EFUnitOfWork.cs" />
     <Compile Include="EFUnitOfWorkFactory.cs" />
