- Completed tests for EF POCO support. - Added tests for EF Code-Only support.

--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
@@ -31,9 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HibernatingRhinos.Profiler.Appender.v4.0">
-      <HintPath>..\..\..\..\..\..\..\Users\Ritesh\Downloads\EntityFramework.Profiler-Build-712\HibernatingRhinos.Profiler.Appender.v4.0.dll</HintPath>
-    </Reference>
+    <Reference Include="Microsoft.Data.Entity.CTP, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\..\..\Libs\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
@@ -56,7 +54,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeOnly\CodeOnlyContext.cs" />
+    <Compile Include="CodeOnly\EFRepositoryQueryTests.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\EFTestData.cs" />
+    <Compile Include="Models\EFTestDataActions.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderItem.cs" />
     <Compile Include="Models\Product.cs" />
@@ -64,9 +66,7 @@
     <Compile Include="POCO\PocoContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CodeOnly\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EntityDeploy Include="POCO\PocoModel.edmx" />
   </ItemGroup>
