- Fixed missing references for Db4o libs. - Changed UnitOfWorkScopeAttribute to not use state, instead use HttpContext to store current unit of work scope.

--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
@@ -31,7 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Data.Entity.CTP, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
+    <Reference Include="Microsoft.Data.Entity.CTP">
+      <HintPath>..\..\..\Libs\Microsoft.Data.Entity.CTP.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\..\..\Libs\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
