- Upgraded Entity Framework CodeFirst to CTP5. - Updated NCommon.EFRepositoryQueryTests.cs for EFCodeFirst CTP5

--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Data.Entity.CTP">
-      <HintPath>..\..\..\Libs\Microsoft.Data.Entity.CTP.dll</HintPath>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\..\Libs\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\..\..\Libs\Microsoft.Practices.ServiceLocation.dll</HintPath>
